# BlockViz

./: .gitignore  BlockViz.spec  LICENSE  README.md  pyproject.toml  start.sh
.github/workflows/: release.yml
scripts/: generate_app_icon.py  package_entry.py
src/blockviz/: __init__.py  __main__.py  app.py
src/blockviz/core/: config.py
src/blockviz/services/: ai_client.py  decompiler.py  mock_data.py  rpc_client.py
src/blockviz/ui/: address.py  ai_settings_dialog.py  async_tasks.py  blocks.py  dashboard.py  main_window.py  styles.py  transactions.py
src/blockviz/ui/widgets/: detail_section.py  icons.py  info_card.py  search_bar.py  sidebar.py
