[project]
name = "blockviz"
version = "1.0.0"
description = "BlockViz – a modern Qt-based blockchain data explorer and visualization tool."
requires-python = ">=3.10"
authors = [{ name = "BlockViz Contributors" }]
dependencies = [
    "PySide6>=6.7,<7.0",
    "pydantic>=2.5,<3.0",
    "requests>=2.31,<3.0"
]

[project.optional-dependencies]
dev = ["ruff>=0.2.0", "pytest>=7.4"]
packaging = ["pyinstaller>=6.6,<7.0"]

[project.scripts]
blockviz = "blockviz.__main__:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
